# kevin

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  RATE_LIMITING.md  README.md  agentic_sdlc_architecture.md  agentic_sdlc_concept.md  agentic_sdlc_workflow.md  design_doc.md  example_app.py  pyproject.toml  requirements.txt  thoughts.md
.claude/: CLAUDE.md
.cursor/: scratchpad.md
.kevin/: analysis.md  fip.md
agents/: agent_01_business_analyst.md  agent_02_planner.md  agent_03_builder.md  agent_04_qa.md  agent_05_security.md  agent_06_platform.md  agent_07_documentation.md  agent_08_learning.md  agent_09_sre.md  agent_10_governance.md  agent_11_pm.md
blueprints/: BP_ID_NAMING_CONVENTION.md  CHANGELOG.md  CONFIG_MANAGEMENT.md  README.md  bp_architecture_blueprint_design.1.0.0.yaml  bp_ba_requirement_analysis.1.0.0.yaml  bp_backend_coding_tdd_automation.1.0.0.yaml  bp_code_review.1.0.0.yaml  bp_coding_task.1.0.0.yaml  bp_deployment_monitoring_automation.1.0.0.yaml  bp_frontend_feature_ui_design.1.0.0.yaml  bp_function_implementation_fip_blueprint.1.0.0.yaml  bp_planning_agent.1.0.0.yaml  bp_planning_agent_orchestration.1.0.0.yaml  bp_test_advanced.1.0.0.yaml  bp_test_e2e.1.0.0.yaml  bp_test_environment_setup.1.0.0.yaml  bp_test_feature_comprehensive_testing.1.0.0.yaml  bp_test_frontend.1.0.0.yaml  bp_test_integration.1.0.0.yaml  bp_test_report_signoff.1.0.0.yaml  bp_test_strategy_design.1.0.0.yaml  bp_test_unit.1.0.0.yaml  planning_agent_state_machine.yaml
config/: rate_limit_config.py
docs/: 2026-03-26-kevin-planning-agent-assessment.md  (+16 more)
(+166 files in other folders)
